Fix layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,3 @@
-@font-face {
-    font-family: "Source Sans Pro";
-    font-style: normal;
-    font-weight: normal;
-    font-display: fallback;
-    src: url("~./static/fonts/source-sans-pro-v19-latin-ext_latin-regular.woff2") format("woff2"),
-        url("~./static/fonts/source-sans-pro-v19-latin-ext_latin-regular.woff") format("woff");
-}
-
-@font-face {
-    font-family: "Source Sans Pro";
-    font-style: normal;
-    font-weight: bold;
-    font-display: fallback;
-    src: url("~./static/fonts/source-sans-pro-v19-latin-ext_latin-700.woff2") format("woff2"),
-        url("~./static/fonts/source-sans-pro-v19-latin-ext_latin-700.woff") format("woff");
-}
-  
-
 * {
     margin: 0;
     padding: 0;
@@ -111,7 +92,6 @@ a:not(.overlay-tab) {
     font-size: 20px;
     width: calc(100% - 36px);
     margin: 10px;
-    margin-bottom: 0;
 }
 
 #current-class {
@@ -140,12 +120,16 @@ a:not(.overlay-tab) {
     -o-transition: left 0.5s;
     transition: left 0.5s;
     position: fixed;
+    background-color: var(--bg-secondary);
+    display: grid;
+    grid-template-rows: repeat(5, min-content) auto;
+    top: 63px;
     left: -200px;
     width: 200px;
     height: calc(100vh - 64px);
     height: calc(var(--wh) - 64px);
-    background-color: var(--bg-secondary);
     z-index: 1;
+    overflow: auto;
 }
 
 #sidebar.visible {
@@ -156,11 +140,13 @@ a:not(.overlay-tab) {
     max-height: 50vh;
     overflow-y: auto;
     width: calc(100% - 10px);
+    position: absolute;
+    margin-top: -10px;
 }
 
 .sidebar-link {
     display: block;
-    margin: 10px;
+    margin: 5px 10px;
     padding: 10px 0px;
     font-size: 18px;
     text-align: center;
@@ -179,16 +165,16 @@ a:not(.overlay-tab) {
 }
 
 #sidebar-bottom {
-    position: absolute;
-    bottom: 10px;
+    align-self: end;
+    margin-top: 30px;
 }
 
 #search-dropdown {
-    height: 50px;
     position: relative;
 }
 
 .search-result {
+    position: absolute;
     display: block;
     background-color: white;
     padding: 10px;
@@ -201,39 +187,53 @@ a:not(.overlay-tab) {
     background-color: #aaa;
 }
 
+:root {
+    /*
+    Calculates the distance from the top of the screen to the top of the first timetable row
+    (the first row including class entries):
+    Top navbar: 63px
+    Progress bar: 2px
+    Padding date: 2 * 8px
+    Date height: 13px (font size)
+    11 rows, 4px border spacing (but * 12 since top and bottom has border spacing too)
+    5px wiggle room in case of rounding errors and whatnot
+    */
+    --tt-margin-abs: calc(63px + 2px + 2*8px + 13px + 4px * 12 + 5px);
+}
+
 .sc_cont {
-    height: calc((100vh - 150px) / 11);
-    height: calc((var(--wh) - 150px) / 11);
+    height: calc((100vh - var(--tt-margin-abs)) / 11);
+    height: calc((var(--wh) - var(--tt-margin-abs)) / 11);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .timetable-lesson-times {
-    height: calc((100vh - 150px) / 11);
-    height: calc((var(--wh) - 150px) / 11);
+    height: calc((100vh - var(--tt-margin-abs)) / 11);
+    height: calc((var(--wh) - var(--tt-margin-abs)) / 11);
 }
 
 .scroller-container {
-    height: calc((100vh - 150px) / 11);
-    height: calc((var(--wh) - 150px) / 11);
+    height: calc((100vh - var(--tt-margin-abs)) / 11);
+    height: calc((var(--wh) - var(--tt-margin-abs)) / 11);
     display: flex;
     align-items: center;
 }
 
 .scroller-container.double {
-    height: calc(2 * (100vh - 150px) / 11);
-    height: calc(2 * (var(--wh) - 150px) / 11);
+    height: calc(2 * (100vh - var(--tt-margin-abs)) / 11);
+    height: calc(2 * (var(--wh) - var(--tt-margin-abs)) / 11);
 }
 
 .scroller-container.triple {
-    height: calc(3 * (100vh - 150px) / 11);
-    height: calc(3 * (var(--wh) - 150px) / 11);
+    height: calc(3 * (100vh - var(--tt-margin-abs)) / 11);
+    height: calc(3 * (var(--wh) - var(--tt-margin-abs)) / 11);
 }
 
 .scroller-container.fullday {
-    height: calc(100vh - 150px);
-    height: calc(var(--wh) - 150px);
+    height: calc(100vh - var(--tt-margin-abs));
+    height: calc(var(--wh) - var(--tt-margin-abs));
 }
 
 .timetable-entry {
@@ -282,7 +282,7 @@ a:not(.overlay-tab) {
 }
 
 .timetable-date {
-    padding: 10px;
+    padding: 8px;
     font-size: 13px;
     height: 0;
 }
@@ -323,6 +323,8 @@ span.entry-title {
     justify-content: center;
     align-items: center;
     height: 100%;
+    position: absolute;
+    top: 0;
 }
 
 #error-timetable.visible {
@@ -505,13 +507,23 @@ img.teacher {
     stroke: var(--color-primary);
 }
 
-form {
+#login-form {
     display: block;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     width: 80%;
     margin: 0 10%;
+}
+
+#login-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+
+form button, form input {
+    font-size: 20px;
 }
 
 label {
@@ -605,7 +617,8 @@ button, #logout, #persplan {
 
 #panel-timetable-cont {
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
+    position: relative;
 }
 
 #panel-settings {
@@ -821,11 +834,12 @@ div#hint-new-timetable:after {
 }
 
 @media only screen and (max-width: 600px) {
-    form button {
-        font-size: 20px;
+    #login-form h2 {
+        font-size: 22px;
     }
-    form input {
-        font-size: 20px;
+
+    form button, form input {
+        font-size: 16px !important;
     }
 }
 
